--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,22 @@
-.DS_Store
+# Dependencies
 node_modules/
-/dist/
+
+/dist
+
+# Log files
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/tests/unit/coverage
-/tests/e2e/reports
-selenium-debug.log
-/src/config/
+package-lock.json*
 
 # Editor directories and files
+.DS_Store
 .idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
+*.sw?
